--- a/source/css/base.styl
+++ b/source/css/base.styl
@@ -75,6 +75,13 @@ a
   &:hover
     text-decoration underline
 
+.highlight
+  font-size 0.8rem
+  .code
+    .line
+      padding-left 5px
+
+
 @media screen and (max-width 760px)
   #sidebar
   #content
