--- a/source/css/base.styl
+++ b/source/css/base.styl
@@ -37,7 +37,7 @@ code
   padding-right 40px
 
   header
-    .brand
+    img.brand
       display block
       border-radius 50%
       background-clip padding-box
