--- a/source/css/base.styl
+++ b/source/css/base.styl
@@ -7,10 +7,11 @@ ruleColor = #a8aeaf
 
 html
   font-size rootFontSize
-  -ms-text-size-adjust 100%;
-  -webkit-text-size-adjust 100%;
-  -moz-osx-font-smoothing grayscale;
-  -webkit-font-smoothing antialiased;
+  -ms-text-size-adjust 100%
+  -webkit-text-size-adjust 100%
+  -moz-osx-font-smoothing grayscale
+  -webkit-font-smoothing antialiased
+  transition all 1s
 
 code
   font-family: fontsMono
